--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ ul a{padding: 10px}
   </head>
   <body>
     <nav>
-
-      https://images.unsplash.com/photo-1503428593586-e225b39bddfe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1500&q=80
+      <img src="https://images.unsplash.com/photo-1503428593586-e225b39bddfe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1500&q=80"
 <ul>
 <li><a href="about.html">About</a></li>
 <li><a href="letter-to-my-future-self.html">Letter To My Future Self</a></li>
