--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap" rel="stylesheet">
     <style>
-body{font-family: 'Raleway', sans-serif;}
+body{font-family: 'Source Serif Pro', serif;}
 ul{padding: 0; list-stlye-type: none; display: flex;}
 ul a{padding:10px;}
 h1 {color:black;}
