--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Worth The Net</title>
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
     <style>
-body{font-family: 'Noto Sans JP', sans-serif;}
+body{font-family: 'Lato', sans-serif;}
 ul{padding: 0; list-stlye-type: none; display: flex;}
 ul a{padding:10px;}
 h1 {color:black;}
